Estilos de los slides listos, y primer slide listo

--- a/public/index.html
+++ b/public/index.html
@@ -22,21 +22,32 @@
 </script>
 <body>
 	<div id="presentation">
-
 	  <div class="slide">
-	    <h1>My Presentation</h1>
-	    <pre>
-
-		</pre>
-	  </div>
+	  	<figure class="logo">
+	  		<img src="images/django-logo.png" alt="">
+	  	</figure>
+	  	<div class="title">
+	    <h1>El Web Framework para perfeccionistas</h1>
+		</div>	    
+		<div class="footer">
+			<a href="">@HenryGBC</a>
+			<a href="">http://henrygbc.com</a>
+		</div>
+	 </div>
 	  
 	  <div class="slide">
+	    <h1>Django</h1>
+	   	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae sint id veniam quam sequi, cum maiores debitis esse, a nihil quibusdam reprehenderit. Laudantium eligendi non ex sequi, similique magni et.</p>
+	    <div class="footer">
+			<a href="">@HenryGBC</a>
+			<a href="">http://henrygbc.com</a>
+		</div>
+	 </div>
+	 <div class="slide">
 	    <h2>My Dot Points</h2>
-	    <ul>
-	      <li>First dot point</li>
-	      <li>Second dot point</li>
-	      <li>Third dot point</li>
-	    </ul>
+	    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab id quidem laudantium, beatae natus vel necessitatibus aut voluptatem, perferendis ratione ea nisi, non fugiat. Iusto facilis nostrum, quasi rerum voluptate!
+			
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis omnis vitae cumque sequi et officia, magni qui voluptatem sunt facere. Minus optio quidem illum, expedita tempora placeat itaque labore esse!
 	 </div>
   
 </div>
