Slide de python listo

--- a/public/index.html
+++ b/public/index.html
@@ -31,23 +31,56 @@
 		</div>	    
 		<div class="footer">
 			<a href="">@HenryGBC</a>
-			<a href="">http://henrygbc.com</a>
+			<a href="">henrygbc.com</a>
 		</div>
 	 </div>
 	  
 	  <div class="slide">
 	    <h1>Django</h1>
-	   	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae sint id veniam quam sequi, cum maiores debitis esse, a nihil quibusdam reprehenderit. Laudantium eligendi non ex sequi, similique magni et.</p>
+	   	<p class="parrafo">Django es un framework de desarrollo web de código abierto, escrito en Python, que respeta el paradigma conocido como Model Template View. Fue desarrollado en origen para gestionar varias páginas orientadas a noticias de la World Company de Lawrence, Kansas, y fue liberada al público bajo una licencia BSD en julio de 2005; el framework fue nombrado en alusión al guitarrista de jazz gitano Django Reinhardt.
+		<a href="http://es.wikipedia.org/wiki/Django_(framework)">http://es.wikipedia.org/wiki/Django_(framework)</a>
+	   	</p>
+	   	<div class="why">
+	   		<p>Pero...  ¿Por qué Django? </p>
+	   	</div>
 	    <div class="footer">
 			<a href="">@HenryGBC</a>
-			<a href="">http://henrygbc.com</a>
+			<a href="">henrygbc.com</a>
 		</div>
 	 </div>
 	 <div class="slide">
-	    <h2>My Dot Points</h2>
-	    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab id quidem laudantium, beatae natus vel necessitatibus aut voluptatem, perferendis ratione ea nisi, non fugiat. Iusto facilis nostrum, quasi rerum voluptate!
-			
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis omnis vitae cumque sequi et officia, magni qui voluptatem sunt facere. Minus optio quidem illum, expedita tempora placeat itaque labore esse!
+	  <figure class="logoDjangoPython">
+	  	<img src="images/python.png" alt="">
+	  </figure>
+		<h2>Python</h2>
+		<p class="parrafo">Python es un lenguaje de programación interpretado cuya filosofía hace hincapié en una sintaxis que favorezca un código legible. Es multiplataforma y multiparadigma</p>
+		<h3>Ventajas</h3>
+		<ul class="parrafo"> 
+			<li>Legible: sintaxis intuitiva y estricta</li>
+			<li>Productivo: ahorra mucho código.</li>
+			<li>Portable: para todo sistema operativo.</li>
+			<li>Recargado: viene con muchas librerías por defecto.</li>
+		</ul>
+
+
+	 </div>
+
+	 <div class="slide">
+	 	<h1 class="bigTitle">Primeros pasos con python</h1>
+	 	<p class="parrafo">Antes de empezar vale acotar que en python <b>todo es un objeto</b></p>
+	 	<h2 class="smallTitle">Variables</h2>
+	 	<p class="parrafo">Las variables en python no necesitan ser definidas ni tampoco su tipo de dato
+						   a diferencia de otros lenguajes de programación		
+	 	</p>
+	 	<pre>A=3 <br>B=A</pre>
+	 	<h2 class="smallTitle">Funciones</h2>
+	 	<p class="parrafo">Las funciones en python son definidas con <b>def</b> junto a un nombre y los parametros que utilizaras terminando con dos puntos. Luego adentro de la función de forma identada ejecutas las operacion.</p>
+	 	<pre> 
+ def my_first_function():
+ 	return "Python rules"
+
+ my_first_function()	
+</pre>
 	 </div>
   
 </div>
